--- a/views/employers/index.hbs
+++ b/views/employers/index.hbs
@@ -1,4 +1,5 @@
 <h1>{{title}}</h1>
+<a href="/employers/create" class="btn btn-secondary">Add a new Employer</a>
 <section class="row">
     {{#each employers}}
     <div class="card col 4">
